# cpp-starter-template

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  InterproceduralOptimization.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
